<resources>
    <string name="app_name">PME</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="course_number">Course Number</string>
    <string name="course_title">Course Title</string>
    <string name="submit">Submit</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="building">Building</string>
    <string name="course_section">Course Section</string>
    <string name="create_schedule">Create Schedule</string>
    <string name="login">LogIn</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="title_activity_display_walking_r">Map</string>
    <string name="back">Back</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="accept">Accept</string>
    <string name="ida_may_wants_to_be_your_friend">Ida May wants to be your friend..</string>
    <string name="decline">Decline</string>
    <string name="jane_doe_wants_to_be_your_friend">Jane Doe wants to be your friend..</string>
</resources>