<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pme.sse.pme.DisplayAccepRequest">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <EditText
            android:id="@+id/editText9"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/jane_doe_wants_to_be_your_friend"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/editText10"
            app:layout_constraintEnd_toStartOf="@+id/checkBox2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp"

            android:text="@string/decline"
            app:layout_constraintBottom_toTopOf="@+id/editText9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/checkBox2" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="13dp"
            android:checked="false"
            android:text="@string/accept"
            app:layout_constraintBottom_toTopOf="@+id/editText9"
            app:layout_constraintRight_toRightOf="@+id/checkBox4" />

        <EditText
            android:id="@+id/editText10"
            android:layout_width="215dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/ida_may_wants_to_be_your_friend"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toStartOf="@+id/checkBox4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText9" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/accept" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginBottom="15dp"
            android:text="@string/decline" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
